# multi-llm-agents

./: .env.example  .gitignore  README.md  docker-compose.yml  livekit.yaml
admin-panel/: index.html  package-lock.json  package.json
admin-panel/src/: App.tsx  index.css  main.tsx
admin-panel/src/api/: agents.ts  client.ts  documents.ts
admin-panel/src/components/: Header.tsx  Layout.tsx  Sidebar.tsx
admin-panel/src/pages/: AgentEditor.tsx  AgentList.tsx  Dashboard.tsx  Login.tsx  Sessions.tsx  Settings.tsx
admin-panel/src/stores/: authStore.ts
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: config.py  main.py
backend/src/api/: deps.py
backend/src/api/v1/: agents.py  documents.py  livekit.py  router.py  sessions.py  settings.py
backend/src/db/: database.py
backend/src/models/: __init__.py  agent.py  document.py  message.py  session.py  setting.py  user.py
backend/src/schemas/: __init__.py  agent.py  document.py  session.py
backend/src/services/: rag_service.py
user-app/: index.html  package-lock.json  package.json
user-app/src/: App.tsx  index.css
voice_agent/: Dockerfile  README.md  pyproject.toml
voice_agent/src/: __init__.py  config.py  main.py
voice_agent/src/db/: __init__.py  session_history.py  settings.py
voice_agent/src/llm/: __init__.py  multi_agent_llm.py  orchestrator.py  parallel_orchestrator.py
voice_agent/src/providers/: __init__.py
voice_agent/src/providers/llm/: __init__.py  groq_llm.py  openai_llm.py  openrouter_llm.py
voice_agent/src/providers/stt/: __init__.py  deepgram_stt.py  openai_stt.py
voice_agent/src/providers/tts/: __init__.py  deepgram_tts.py  elevenlabs_tts.py  openai_tts.py
voice_agent/src/tools/: __init__.py  rag_retriever.py  weather.py  web_search.py
